--- a/index.html
+++ b/index.html
@@ -7,37 +7,44 @@
   <link rel="shortcut icon" href="https://icons.iconarchive.com/icons/froyoshark/enkel/256/Telegram-icon.png">
   <title>Telegram Form</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script defer src="https://pro.fontawesome.com/releases/v5.15.0/js/all.js"></script>
+  <link rel="stylesheet" href="./public/css/style.css">
 </head>
 <body>
-  <div class="container mt-5 pt-5" width="100%">
-    <form id="tg">
-      <div class="col-md-6 offset-md-3">
+  <div class="wrapper">
+    <div class="container pt-5">
+      <form id="tg">
+        <div class="col-md-6 offset-md-3">
 
-        <div class="form-group">
-          <label class="form-label">Name</label>
-          <input type="text" name="name" class="form-control">
+          <h1 class="container__title">Let's get in touch</h1>
+          <p class="container__paragraph mt-4">We're open for any suggestion <br> or just to have a chat</p>
+  
+          <div class="form-group mt-4">
+            <i class="far fa-regular fa-user"></i>
+            <input type="text" placeholder="Name" name="name" class="form-control">
+          </div>
+  
+          <div class="form-group mt-2">
+            <i class="far fa-regular fa-envelope"></i>
+            <input type="email" placeholder="Email" name="email" class="form-control">
+          </div>
+  
+          <div class="form-group mt-2">
+            <i class="far fa-regular fa-pen"></i>
+            <textarea name="message" placeholder="Message" class="form-control"></textarea>
+          </div>
+  
+          <div id="success" class="alert alert-success mt-3" role="alert" style="display: none;">Form submitted successfully!</div>
+          <div id="error" class="alert alert-danger mt-3" role="alert" style="display: none;">Something went wrong!</div>
+          <div id="finally" class="alert alert-info mt-3" role="alert" style="display: none;">Please reload the site if you want to send another message.</div>
+  
+          <button type="submit" class="btn mt-4">Send message</button>
         </div>
-
-        <div class="form-group mt-2">
-          <label class="form-label">Email</label>
-          <input type="email" name="email" class="form-control">
-        </div>
-
-        <div class="form-group mt-2">
-          <label class="form-label">Message</label>
-          <textarea name="message" class="form-control"></textarea>
-        </div>
-
-        <div id="success" class="alert alert-success mt-3" role="alert" style="display: none;">Form submitted successfully!</div>
-        <div id="error" class="alert alert-danger mt-3" role="alert" style="display: none;">Something went wrong!</div>
-        <div id="finally" class="alert alert-info mt-3" role="alert" style="display: none;">Please reload the site if you want to send another message.</div>
-
-        <button type="submit" class="btn btn-primary mt-3">Send</button>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="main.js"></script>
+  <script src="./public/js/main.js"></script>
 </body>
 </html>
