padding-bottom for the container

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="container pt-5">
+    <div class="container pt-5 pb-5">
       <form id="tg">
         <div class="col-md-6 offset-md-3">
 
@@ -38,7 +38,7 @@
           <div id="error" class="alert alert-danger mt-3" role="alert" style="display: none;">Something went wrong!</div>
           <div id="finally" class="alert alert-info mt-3" role="alert" style="display: none;">Please reload the site if you want to send another message.</div>
   
-          <button type="submit" class="btn mt-4 mb-4">Send message</button>
+          <button type="submit" class="btn mt-4">Send message</button>
         </div>
       </form>
     </div>
